tests/fixtures/negative/complexity/NestedScopeFunctions.kt
package complexity

data class Outer(val inner: String?)

fun example() {
    val x = Outer("hello")
    x.apply {
        println(inner)
    }
}
